--- a/discs/static/discs/css/styles.css
+++ b/discs/static/discs/css/styles.css
@@ -3,19 +3,26 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+a {
+  text-decoration: none;
+  color: antiquewhite;
+  width: fit-content;
+}
 
 body {
-  font-size: 1.3rem;
-  font-family: sans-serif;
-  background: rgb(34, 34, 34);
-  color: white;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-  gap: 2rem;
-  margin: 0 auto;
-  max-width: 500px;
+  width: 850px;
   height: auto;
+  margin: 0 auto;
+  font-family: sans-serif;
+  background: rgb(24, 24, 24);
+  color: white;
+}
+
+.container {
+  display: grid;
+  justify-content: space-evenly;
+  row-gap: 1rem;
+  text-align: center;
 }
 
 h1,
@@ -24,10 +31,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: 2rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 
 .search-form {
   /* border: 1px solid antiquewhite; */
@@ -84,9 +89,9 @@ h6 {
 
 .main-content {
   display: block;
-  max-width: 800px;
+  max-width: 850px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -108,4 +113,96 @@ h6 {
 .category-link {
   margin-top: 1.5rem;
   text-align: left;
+}
+
+.disc-card {
+  float: left;
+  display: flex;
+  font-size: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 1rem;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    max-width:400px;
+    height: auto;
+    margin: auto 0;
+  }
+
+  .container {
+    display: grid;
+    justify-content: center;
+    row-gap: 1rem;
+    text-align: left;
+  }
+
+  .disc-card {
+    display: grid;
+    font-size: 1rem;
+    flex-wrap: wrap;
+    justify-items: center;
+    row-gap: 1rem;
+  }
+
+}
+
+.disc-card p{
+  font-weight: bolder;
+  color: rgb(253, 199, 129);
+}
+
+.disc-card img {
+  max-width: 250px;
+  height: auto;
+  border-radius: 10%;
+  transition: all 300ms ease-in-out;
+}
+
+.disc-card img:hover {
+  transform: scale(1.015);
+  border-radius: 0%;
+}
+
+.disc-list {
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    gap: 2rem;
+}
+
+.disc-list a {
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+.disc-list a:hover {
+  filter: brightness(1.2);
+}
+
+.disc-list small:hover {
+  filter: brightness(2);
+}
+
+.disc-text {
+  height: fit-content;
+}
+
+.nav-main {
+  display: flex;
+  padding: 1.5rem 0;
+  width: fit-content;
+  justify-content: center;
+}
+
+.nav-main h3 {
+  margin-right: 10px;
+  font-size: 1.5rem;
+}
+
+.edit-album {
+  display: flex;
+  flex-flow: wrap;
+  width: fit-content;
+  height: fit-content;
 }
