--- a/discs/templates/discs/artist-detail.html
+++ b/discs/templates/discs/artist-detail.html
@@ -2,15 +2,16 @@
 
 {% block content %}
 
-      <h3 class="mt-5">Artists</h3>
+      {% include 'discs/partials/_nav.html' %}
       <a href="#">+ new artist</a>
       <a href="#">- remove artist</a>
 
-  
          <p>
+            <a href="{% url 'albums' object.slug %}">
             <img src="{{ object.picture.url }}" alt="{{ object.name }}" style="max-width: 175px; height: auto;  border-radius: 50%;">
+            </a>
          </p>
-         <span><a href="#">{{ object.name }}</a></span>
+         <span>{{ object.name }}</span>
 
 
 
