--- a/discs/templates/discs/artists.html
+++ b/discs/templates/discs/artists.html
@@ -1,16 +1,20 @@
 {% extends 'discs/base.html' %}
 
+{% block title %}Artists{% endblock title %}
+
 {% block content %}
 
-      <h3 class="mt-5">Artists</h3>
+      {% include 'discs/partials/_nav.html' %}
       <a href="#">+ new artist</a>
       <a href="#">- remove artist</a>
 
       {% for artist in artists %}
          <p>
+            <a href="{% url 'artist-detail' slug=artist.slug %}">
             <img src="{{ artist.picture.url }}" alt="{{ artist.name }}" style="max-width: 175px; height: auto;  border-radius: 50%;">
+            </a>
          </p>
-         <span><a href="{% url 'artist-detail' slug=artist.slug %}">{{ artist.name }}</a></span>
+         <span>{{ artist.name }}</span>
       {% endfor %}
 
 
