--- a/discs/templates/discs/home.html
+++ b/discs/templates/discs/home.html
@@ -9,8 +9,8 @@
             <h2 class="">Wecome to your,<br>digital Rack</h2>
             <img src="{% static 'discs/img/vinyl-icon.png' %}" alt="">
             <div class="category-link">
-                <a href="#"> Discs</a>
-                <a href="#"> Artists</a>
+                <a href="{% url 'discs' %}"> Discs</a>
+                <a href="{% url 'artists' %}"> Artists</a>
             </div>
 
         </div>
