--- a/discs/templates/discs/home.html
+++ b/discs/templates/discs/home.html
@@ -11,7 +11,8 @@
             <div class="category-link">
                 <a href="{% url 'discs' %}"> Discs</a>
                 <a href="{% url 'artists' %}"> Artists</a>
-                {% comment %} <a href="{% url 'category' %}">Category</a> {% endcomment %}
+                <a href="#">Category</a>
+                
             </div>
 
         </div>
