--- a/discs/templates/discs/base.html
+++ b/discs/templates/discs/base.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock title %} | Rack</title>
 </head>
 <body>
-
+        {% include 'discs/partials/_nav.html' %}
         {% block content %}{% endblock %}
 
 </body>
